Make CompactHistoryBlock size variable

When needed CompactHistoryBlock can now increase from 256kb to a bigger
size.

BUG: 436031